--- a/generator.html
+++ b/generator.html
@@ -1334,6 +1334,8 @@
         if (gamePointNumber.innerText >= 10000) {
           alert("you've won the game")
         }
+        var newPointNumber = Number(gamePointNumber.innerText + 10);
+        gamePointNumber.innerText = newPointNumber;
         hideSurvey();
       }
       //Instant Functions
