--- a/generator.html
+++ b/generator.html
@@ -790,7 +790,7 @@
           alert("Your fleet is already at full capacity!");
           return;
         }
-        else if (Number(gamePointNumber.innerText) >= 0) {
+        else if (Number(gamePointNumber.innerText) < 0) {
           alert("Your points are negative, you cannot build ships");
           return;
         }
@@ -825,7 +825,7 @@
           alert("Your fleet is already at full capacity!");
           return;
         }
-        else if (Number(gamePointNumber.innerText) >= 0) {
+        else if (Number(gamePointNumber.innerText) < 0) {
           alert("Your points are negative, you cannot build ships");
           return;
         }
@@ -860,7 +860,7 @@
           alert("Your fleet is already at full capacity!");
           return;
         }
-        else if (Number(gamePointNumber.innerText) >= 0) {
+        else if (Number(gamePointNumber.innerText) < 0) {
           alert("Your points are negative, you cannot build ships");
           return;
         }
@@ -897,7 +897,7 @@
           alert("Your fleet is already at full capacity!");
           return;
         }
-        else if (Number(gamePointNumber.innerText) >= 0) {
+        else if (Number(gamePointNumber.innerText) < 0) {
           alert("Your points are negative, you cannot build ships");
           return;
         }
@@ -934,7 +934,7 @@
           alert("Your fleet is already at full capacity!");
           return;
         }
-        else if (Number(gamePointNumber.innerText) >= 0) {
+        else if (Number(gamePointNumber.innerText) < 0) {
           alert("Your points are negative, you cannot build ships");
           return;
         }
@@ -1366,4 +1366,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.322--->
+<!--Version 0.323--->
