--- a/generator.html
+++ b/generator.html
@@ -599,7 +599,7 @@
           alert ("Unidentified planet")
         }
         $("surveyPop").innerText = el.population || 0;
-        if (el.classList.contains(colony)) {
+        if (el.classList.contains("colony")) {
           console.log("this is a colony");
         }
         else {
@@ -1367,4 +1367,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.326--->
+<!--Version 0.327--->
