--- a/test7.html
+++ b/test7.html
@@ -17,8 +17,8 @@
         gap: 1.75px; background: #1d4b96; transition:0.4s;
       }
       
-      .constructonCell { background: lightgray; padding: 3px; position: relative; overflow:hidden; background:#7096cf; }
-      .constructonCell p { font-family: 'MedievalSharp', cursive; font-size:110%; }
+      .constructionCell { background: lightgray; padding: 3px; position: relative; overflow:hidden; background:#7096cf; }
+      .constructionCell p { font-family: 'MedievalSharp', cursive; font-size:110%; }
       .constructionCaption { grid-area:constructionCaption; text-align:center; }
       .constructionCaption span { font-size:130%; text-align:center; }
       .constructionButton1 { grid-area:constructionButton1; }
@@ -72,4 +72,4 @@
     
   </body>
 </html>
-<!--Version 1--->
+<!--Version 2--->
