--- a/test7.html
+++ b/test7.html
@@ -42,7 +42,7 @@
   </head>
   <body>
     
-    <div class="designationMenu" id="designationMenu">
+    <div class="constructionMenu" id="constructionMenu">
       <div class="constructionCell constructionCaption"><span id="constructionCaption"> Designation Choices </span></div>
       <div class="constructionCell constructionButton1"><button id="constructionButton1" onclick="constructNationalBank()"> Build National Bank </button></div>
       <div class="constructionCell constructionMineralIcon"><img id="constructionCreditIcon" src="crediticon.png"></img></div>
