--- a/test7.html
+++ b/test7.html
@@ -6,7 +6,7 @@
     <style>
     
       .constructionMenu { position:absolute; top:430px; left:1050px; width: 190px; height: 250px; font-family: 'MedievalSharp', cursive; 
-        font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: none; margin: 15px;
+        font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: inline-grid; margin: 15px;
         grid-template-columns: repeat(3, 1fr); grid-auto-rows: auto;
         grid-template-areas:
           "constructionCaption constructionCaption  constructionCaption"
@@ -24,15 +24,16 @@
       .constructionButton1 { grid-area:constructionButton1; }
       .constructionButton2 { grid-area:constructionButton2; }
       .constructionButton3 { grid-area:constructionButton3; }
+      .constructionButton4 { grid-area:constructionButton4; }
       .constructionMineralIcon { grid-area:constructionMineralIcon; }
       .constructionCreditIcon { grid-area:constructionCreditIcon; }
       .constructionSupplyIcon { grid-area:constructionSupplyIcon; }
       #constructionAuthorityIcon { grid-area:constructionAuthorityIcon; }
       #constructionMenu {  }
-      #constructionCreditIcon { image-rendering:pixelated; position:relative; height:35px; width:35px; }
-      #constructionMineralIcon { image-rendering:pixelated; position:relative; height:35px; width:35px; }
-      #constructionSupplyIcon { image-rendering:pixelated; position:relative; height:35px; width:35px; }
-      #constructionAuthorityIcon { image-rendering:pixelated; position:relative; height:35px; width:35px; }
+      #constructionCreditIcon { image-rendering:pixelated; position:relative; height:30px; width:30px; }
+      #constructionMineralIcon { image-rendering:pixelated; position:relative; height:30px; width:30px; }
+      #constructionSupplyIcon { image-rendering:pixelated; position:relative; height:30px; width:30px; }
+      #constructionAuthorityIcon { image-rendering:pixelated; position:relative; height:30px; width:30px; }
       #constructionButton1 { border-radius:10%; background:slateblue; color:white; font-family:'MedievalSharp', cursive; width:110px; margin:1px; font-size:80%; }
       #constructionButton2 { border-radius:10%; background:slateblue; color:white; font-family:'MedievalSharp', cursive; width:110px; margin:1px; font-size:80%; }
       #constructionButton3 { border-radius:10%; background:slateblue; color:white; font-family:'MedievalSharp', cursive; width:110px; margin:1px; font-size:80%; }
@@ -72,4 +73,4 @@
     
   </body>
 </html>
-<!--Version 2--->
+<!--Version 4--->
