--- a/test7.html
+++ b/test7.html
@@ -46,11 +46,11 @@
   <body>
     
     <div class="constructionMenu" id="constructionMenu">
-      <div class="constructionCell constructionCaption"><span id="constructionCaption"> Designation Choices </span></div>
+      <div class="constructionCell constructionCaption"><span id="constructionCaption"> Buildings </span></div>
       <div class="constructionCell constructionButton1"><button id="constructionButton1" onclick="constructNationalBank()"> Build National Bank </button></div>
-      <div class="constructionCell constructionMineralIcon"><img id="constructionCreditIcon" src="crediticon.png"></img></div>
+      <div class="constructionCell constructionCreditIcon"><img id="constructionCreditIcon" src="crediticon.png"></img></div>
       <div class="constructionCell constructionButton2"><button id="constructionButton2" onclick="constructStripMines()"> Build Strip Mines </button></div>
-      <div class="constructionCell constructionCreditIcon"><img id="constructionMineralIcon" src="gemstoneicon.png"></img></div>
+      <div class="constructionCell constructionMineralIcon"><img id="constructionMineralIcon" src="gemstoneicon.png"></img></div>
       <div class="constructionCell constructionButton3"><button id="constructionButton3" onclick="constructHydroponicFarms()"> Build Hydroponic Farms </button></div>
       <div class="constructionCell constructionSupplyIcon"><img id="constructionSupplyIcon" src="supplyicon.png"></img></div>
       <div class="constructionCell constructionButton4"><button id="constructionButton4" onclick="constructLawOffices()"> Build Law Offices </button></div>
@@ -75,4 +75,4 @@
     
   </body>
 </html>
-<!--Version 5--->
+<!--Version 6--->
