--- a/test7.html
+++ b/test7.html
@@ -46,7 +46,7 @@
   <body>
     
     <div class="constructionMenu" id="constructionMenu">
-      <div class="constructionCell constructionCaption"><span id="constructionCaption"> Buildings </span></div>
+      <div class="constructionCell constructionCaption"><span id="constructionCaption"> Colony Buildings </span></div>
       <div class="constructionCell constructionButton1"><button id="constructionButton1" onclick="constructNationalBank()"> Build National Bank </button></div>
       <div class="constructionCell constructionCreditIcon"><img id="constructionCreditIcon" src="crediticon.png"></img></div>
       <div class="constructionCell constructionButton2"><button id="constructionButton2" onclick="constructStripMines()"> Build Strip Mines </button></div>
