--- a/generator.html
+++ b/generator.html
@@ -355,7 +355,7 @@
       <div class="cell bottom"></div>
     </div>
     
-    <div class="constructionMenu" id="constructionMenu">
+    <div class="constructionMenu" id="constructionMenu" onclick="hideSurvey()">
       <div class="constructionCell constructionCaption"><span id="constructionCaption"> Colony Buildings </span></div>
       <div class="constructionCell constructionButton1"><button id="constructionButton1" onclick="constructNationalBank()"> Build National Bank </button></div>
       <div class="constructionCell constructionCreditIcon"><img id="constructionCreditIcon" src="crediticon.png"></img></div>
