--- a/generator.html
+++ b/generator.html
@@ -355,16 +355,16 @@
       <div class="cell bottom"></div>
     </div>
     
-    <div class="constructionMenu" id="constructionMenu" onclick="hideSurvey()">
-      <div class="constructionCell constructionCaption"><span id="constructionCaption"> Colony Buildings </span></div>
+    <div class="constructionMenu" id="constructionMenu">
+      <div class="constructionCell constructionCaption" onclick="hideSurvey()"><span id="constructionCaption"> Colony Buildings </span></div>
       <div class="constructionCell constructionButton1"><button id="constructionButton1" onclick="constructNationalBank()"> Build National Bank </button></div>
-      <div class="constructionCell constructionCreditIcon"><img id="constructionCreditIcon" src="crediticon.png"></img></div>
+      <div class="constructionCell constructionCreditIcon" onclick="hideSurvey()"><img id="constructionCreditIcon" src="crediticon.png"></img></div>
       <div class="constructionCell constructionButton2"><button id="constructionButton2" onclick="constructStripMines()"> Build Strip Mines </button></div>
-      <div class="constructionCell constructionMineralIcon"><img id="constructionMineralIcon" src="gemstoneicon.png"></img></div>
+      <div class="constructionCell constructionMineralIcon" onclick="hideSurvey()"><img id="constructionMineralIcon" src="gemstoneicon.png"></img></div>
       <div class="constructionCell constructionButton3"><button id="constructionButton3" onclick="constructHydroponicFarms()"> Build Hydro-Farms </button></div>
-      <div class="constructionCell constructionSupplyIcon"><img id="constructionSupplyIcon" src="supplyicon.png"></img></div>
+      <div class="constructionCell constructionSupplyIcon" onclick="hideSurvey()"><img id="constructionSupplyIcon" src="supplyicon.png"></img></div>
       <div class="constructionCell constructionButton4"><button id="constructionButton4" onclick="constructLawOffices()"> Build Law Offices </button></div>
-      <div class="constructionCell constructionAuthorityIcon"><img id="constructionAuthorityIcon" src="authorityicon.png"></img></div>
+      <div class="constructionCell constructionAuthorityIcon" onclick="hideSurvey()"><img id="constructionAuthorityIcon" src="authorityicon.png"></img></div>
     </div>
 
     <img class="star" id="s1"></img>  
@@ -1431,4 +1431,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.330--->
+<!--Version 0.331--->
