--- a/generator.html
+++ b/generator.html
@@ -1329,11 +1329,13 @@
         }
         var allJunkPlanets = $$('.planet.salvagedJunk');
         var allGasPlanets = $$('.planet.salvagedGas');
-        for (const pEl of allJunkPlanets) {
+        var junkPlanetRandomizer = Number(Math.floor(Math.random * 5) + 1);
+        var gasPlanetRandomizer = Number(Math.floor(Math.random * 5) + 1);
+        for (const pEl of allJunkPlanets && gasPlanetRandomizer == 1) {
           pEl.classList.remove("salvagedJunk");
           pEl.addEventListener("click", salvageJunkPlanet, true);
         }
-        for (const pEl of allGasPlanets) {
+        for (const pEl of allGasPlanets && junkPlanetRandomizer == 1) {
           pEl.classList.remove("salvagedGas");
           pEl.addEventListener("click", salvageGasPlanet, true);
         }
@@ -1434,4 +1436,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.333--->
+<!--Version 0.334--->
