--- a/generator.html
+++ b/generator.html
@@ -589,6 +589,9 @@
         if (el.designated == true) {
           return;
         }
+        else if (el.starbase != true) {
+          return;
+        }
         else {
           var designationMenu = $("designationMenu");
           designationMenu.style.display = "inline-grid";
@@ -1440,4 +1443,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.336--->
+<!--Version 0.337--->
