--- a/generator.html
+++ b/generator.html
@@ -619,7 +619,7 @@
       
       function survey() {
         var el = $(lastSelectedPlanet);
-        lastSurveyedPlanet = el;
+        lastSurveyedPlanet = el.id;
         console.log(el.biome);
         var infoBox = $("info-box");
         var menu = $("constructionMenu");
@@ -1448,4 +1448,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.338--->
+<!--Version 0.339--->
