--- a/generator.html
+++ b/generator.html
@@ -1398,7 +1398,9 @@
         var event2Target = planetElList[2];
         var event2Randomizer = Number(Math.floor(Math.random() * 2) + 1);
         if (event2 !== undefined && event2Target !== undefined && event2Randomizer == "1" && habitablePlanets.includes(event2Target.biome)) {
-          if (allColonies.includes(event2Target) == false) {
+          var targetFound = false;
+          allColonies.forEach(colonyEl => if (colonyEl == eventToTarget) targetFound = true);
+          if (!targetFound) {
             event2.style.display = "inline-grid";
             e2PlanetName.innerText = event2Target.randomName;
             e2PlanetName2.innerText = event2Target.randomName;
@@ -1465,4 +1467,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.341--->
+<!--Version 0.342--->
