--- a/generator.html
+++ b/generator.html
@@ -769,6 +769,7 @@
           el.classList.add("nationalBank");
           var button = $("constructionButton1");
           button.style.background = "forestgreen";
+          button.disabled = true;
           el.nationalBank = true;
           if (el.buildingSlots === undefined) {
             el.buildingSlots = 1;
@@ -1474,4 +1475,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.347--->
+<!--Version 0.348--->
