--- a/generator.html
+++ b/generator.html
@@ -136,7 +136,7 @@
       #passiveTitan {  }
       
       #turnButton { border-radius:10%; background:slateblue; color:white; font-family:'MedievalSharp', cursive; width:90px; margin:1px; font-size:80%; 
-                    position:absolute; display:fixed; top:750px; left:1100px; }
+                    position:fixed; display:block; top:750px; left:1100px; }
       
       .designationMenu { position:absolute; top:20px; left:20px; width: 180px; height: 190px; font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: none; margin: 15px;
@@ -285,7 +285,7 @@
       .EAname { grid-area:EAname; text-align:center; margin-top:10px; }
       .EAname span { white-space:nowrap; font-size:200%; }
       .EAname i { font-family: 'MedievalSharp', cursive; font-size:200%; }
-      .EAdesc { grid-area:EAdesc; text-align:center; padding:2px; }
+      .EAdesc { grid-area:EAdesc; text-align:center; padding:10px; }
       .EAbutton { grid-area:EAbutton; }
       #E1button { border-radius:10%; background:slateblue; color:white; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
       #E2button { border-radius:10%; background:slateblue; color:white; font-family:'MedievalSharp', cursive; width:250px; margin:7.5px; }
@@ -1475,4 +1475,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.348--->
+<!--Version 0.349--->
